avoid line breaks in contextual words. Fix comma showing up as part of lowercase

--- a/layouts/contextual.css
+++ b/layouts/contextual.css
@@ -3,3 +3,7 @@
 	box-sizing: content-box;
 	width: 2em;
 }
+
+#the-proof.contextual > span {
+	white-space: nowrap;
+}
